# cmake_playground

./: .gitignore  .gitmodules
boost_demo/: CMakeLists.txt  README.md  atomic.cpp  atomic_test.cpp  filesystem.cpp  thread.cpp
configure_file/: CMakeLists.txt  configure.cpp
fetch-content/: CMakeLists.txt
find-package-custom/: CMakeLists.txt  README  README.md  main.cpp
find-package-custom/cmake/module/: FindPQXX.cmake
find_package_custom/: CMakeLists.txt
find_package_custom/cmake/module/: FindPQXX.cmake
first_project/: CMakeLists.txt
generator_expression/: README.md
generator_expression/src/: CMakeLists.txt
generator_expression/src/app1/: CMakeLists.txt  app1.cpp
generator_expression/src/lib1/: lib1.h
git-submodule/: CMakeLists.txt  config.yaml  main.cpp
git-submodule-auto/: CMakeLists.txt
gmock_demo/: CMakeLists.txt  MyInterface.h  mywork.cpp  mywork.h  mywork_test.cpp
grpc-find-package-targets/: CMakeLists.txt
gtest_demo/: .gitignore  CMakeLists.txt  hello_test.cc
gtest_sample/cxx-example/: CMakeLists.txt
helloworld/: CMakeLists.txt  echo.cpp  echo.hpp  main.cpp
paseto_demo/: CMakeLists.txt  README.md  hello.hpp
postgres/: CMakeLists.txt  README  main.cpp
precompile_headers/: CMakeLists.txt
precompile_headers/src/: CMakeLists.txt
precompile_headers/src/app1/: CMakeLists.txt  README.md  main.cpp
precompile_headers/src/app1/lib/: CMakeLists.txt  calc.cpp  calc.h
project_structure/: CMakeLists.txt
project_structure/src/: CMakeLists.txt
project_structure/src/app1/lib3/: CMakeLists.txt  lib3.cpp  lib3.h
project_structure/src/app2/: CMakeLists.txt
project_structure/src/lib1/: CMakeLists.txt  lib1.cpp
project_structure/src/lib2/: CMakeLists.txt  lib2.cpp  lib2.h
protobuf/: CMakeLists.txt
protobuf/src/: CMakeLists.txt
protobuf/src/app/: CMakeLists.txt  main.cpp
protobuf/src/proto/: CMakeLists.txt
rxcpp/: CMakeLists.txt  main.cpp
script/: CMakeLists.txt  README.md  build.sh  compare.cmake  function.cmake  if.cmake  if_inlist.cmake  list.cmake  loop.cmake  macro.cmake  message.cmake  message_context.cmake  scope.cmake  variable.cmake
sub_directory/: CMakeLists.txt  main.cpp
sub_directory/cars/: CMakeLists.txt  car.cpp  car.h
